# beans

./: .envrc  .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  Makefile  README  README.md  SYNTAX  a.py  a.py~  build.rs  debugger.py  dot.py  flake.nix  main.py  shell.nix  shell.py  stderr.py  stdout.py  test.py  utest.py  utest.py~
.github/workflows/: rust.yml
bash/: beans
beansast/: ASTnodes.py  ASTnodes.py~  __init__.py  __init__.py~  astnodes.py  color.py  gmrreader.py  lexer.gmr  lexer.py  lxrgmrparser.py  parser.gmr  parser.old.py  parser.py  primitives.py  primitives.py~  psrgmrparser.py  quickparser.py  rawparsers.py  rawparsers.py~  state.py  stderr.py  stdloc.py  stdout.py  te.py  tokenparser.py  tokenparser.py~  utest.py
beansast/gmrs/: lexer.gmr  parser.gmr  parser.old.gmr  plexer-m.gmr  plexer-r.gmr  plexer.gmr
beansast/tests/: test_exprs.bns  test_lexer_lexer.bns  test_lexer_lexer.gmr  test_lxrgmrparser_lexerreader.gmr  test_lxrgmrparser_lexerreader_update.gmr  test_parser.bns
beanscomp/: __init__.py  vmcompiler.py
beansexe/: #rawparsers.py#  __init__.py  __init__.py~  executer.py
benches/: regex_benchmark.rs
doc/: book.toml
doc/examples/arith/: arith.gr  arith.lx  input-prior-1  input-prior-2  wrong-input
doc/src/: README.md  SUMMARY.md  rust.md
doc/src/ast/: README.md
doc/src/concepts/: README.md  grammars.md  lexer.md  parser.md
doc/src/details/: tradeoff.md
doc/src/errors/: README.md
doc/src/getting-started/: README.md  compile.md  install.md
gmrs/: lexer.gmr  lexer.lx  parser.gmr  parser.gr  parser.lx
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: env.sh  migration.sh
src/: builder.rs  case.rs  cli.rs  completions.rs  error.rs  lexer.rs  lib.rs  list.rs  location.rs  main.rs  newtype.rs  parser.rs  printer.rs  regex.rs  regex2.rs  render.rs  span.rs  stream.rs  test_utilities.rs  typed.rs  utilities.rs  wrapper.rs
src/lexer/: ast.rs  grammar.rs  grammarparser.rs  lexer.cgr  lexer.clx  lexer.gr  lexer.gr.ast  lexer.lx  lexer.lx.ast  lexer.rs
src/parser/: ast.rs  earley.rs  grammar.rs  grammarparser.rs  list.rs  parser.cgr  parser.clx  parser.gr  parser.gr.ast  parser.lx  parser.lx.ast  parser.rs  petitc.gr  petitc.lx
src/parser/gmrs/: dummy.cgr  dummy.clx  dummy.gr  dummy.lx  earley.clx  earley.lx  petitc.cgr  petitc.clx  petitc.gr  petitc.lx
src/regex/: api.rs  matching.rs  parsing.rs
src/regex2/: api.rs  matching.rs  parsing.rs
utest_scripts/: test1.bns
