[package]
name = "beans"
version = "2.5.0"
authors = ["Adrien Mathieu <adrien.lc.mathieu@gmail.com>"]
license = "MIT OR GPL-3.0-or-later"
edition = "2021"
description = "A parser generator library based on the Earley parser"
homepage = "https://github.com/TheBlackBeans/beans"
repository = "https://github.com/TheBlackBeans/beans"

[dependencies]
newty = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
unbounded-interval-tree = { version = "1.1", features = ["serde"] }
bincode = "1.3"
thiserror = "1.0"
fixedbitset = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
fragile = "1.2"
itertools = "0.10"
ptree = "0.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
regex = "1"

[[bench]]
name = "regex_benchmark"
harness = false
