[package]
name = "beans"
version = "7.1.0"
authors = ["Adrien Mathieu <adrien.lc.mathieu@gmail.com>"]
license = "MIT OR GPL-3.0-or-later"
edition = "2021"
description = "A parser generator library based on the Earley parser"
homepage = "https://github.com/jthulhu/beans"
repository = "https://github.com/jthulhu/beans"

[workspace]
members = [ "macros" ]

[dependencies]
newty = "0.5"
serde = { version = "1", features = ["derive", "rc"] }
unbounded-interval-tree = { version = "1", features = ["serde"] }
bincode = "1"
thiserror = "1"
fixedbitset = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
fragile = "2"
itertools = "0.10"
ptree = "0.4"
const_format = "0.2"
serde_json = "1"
beans-derive = "7"
either = "1.8.1"
